--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "dependencies": {
     "sirv-cli": "^1.0.0",
     "svelte-navigator": "^3.1.5",
+    "svelte-table": "^0.3.4",
     "utilcomps": "^2.0.4",
     "uuid": "^8.3.2"
   }
