--- a/package.json
+++ b/package.json
@@ -27,9 +27,10 @@
     "typescript": "4.3.5"
   },
   "dependencies": {
+    "@smui/checkbox": "^6.0.0-beta.16",
+    "@smui/data-table": "^6.0.0-beta.16",
     "sirv-cli": "^1.0.0",
     "svelte-navigator": "^3.1.5",
-    "svelte-table": "^0.3.4",
     "utilcomps": "^2.0.4",
     "uuid": "^8.3.2"
   }
